# mandex

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  design.md  install.sh  launch-posts.md  packages.md  post.md
.claude/: ralph-loop.local.md
.github/: RELEASE_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  new_mandex_support.yml
.github/workflows/: release.yml
.mandex/: manifest.json
api/: package-lock.json  package.json  schema.sql  wrangler.toml
api/.mandex/: manifest.json
api/src/: index.ts
benches/: search_compare.rs
docs/: building-packages.md  installation.md  introduction.md  managing-packages.md  package-format.md  pulling-packages.md  searching.md
src/: config.rs  main.rs  rerank.rs
src/commands/: build.rs  info.rs  init.rs  list.rs  mod.rs  pull.rs  remove.rs  search.rs  show.rs  sync.rs
src/storage/: db.rs  mod.rs  paths.rs  project.rs
website/: GEMINI.md  astro.config.mjs  package-lock.json  package.json
website/.claude/: ralph-loop.local.md
website/.mandex/: manifest.json
website/public/: _redirects  install.sh
website/src/components/: BentoGrid.astro  Features.astro  Marquee.astro  Readme.astro  Terminal.astro  TerminalDemo.astro  TerminalFeed.astro
website/src/content/: about.md
website/src/content/docs/docs/: configuration.mdx  for-authors.mdx  getting-started.mdx  index.mdx
website/src/content/docs/docs/commands/: build.mdx  init.mdx  list.mdx  pull.mdx  search.mdx  show.mdx  sync.mdx
website/src/content/docs/docs/integrations/: claude-code.mdx  codex.mdx  cursor.mdx  windsurf.mdx
website/src/data/: registry.json
website/src/layouts/: DocsLayout.astro  Layout.astro
website/src/pages/: about.astro  index.astro  registry.astro
website/src/pages/docs/: configuration.mdx  for-authors.mdx  getting-started.mdx  index.mdx
website/src/pages/docs/commands/: build.mdx  init.mdx  list.mdx  pull.mdx  search.mdx  show.mdx  sync.mdx
website/src/pages/docs/integrations/: claude-code.mdx  codex.mdx  cursor.mdx  windsurf.mdx
website/src/styles/: global.css  starlight.css
