[package]
name = "mandex"
version = "0.1.0"
edition = "2024"
description = "Documentation packages for AI agents"
license = "MIT"
repository = "https://github.com/bhavnicksm/mandex"
homepage = "https://mandex.dev"
keywords = ["documentation", "ai", "agents", "search", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
dirs = "6"
anyhow = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
