[package]
name = "mandex"
version = "0.1.4"
edition = "2024"
description = "Documentation packages for AI agents"
license = "MIT"
repository = "https://github.com/chonkie-inc/mandex"
homepage = "https://mandex.dev"
keywords = ["documentation", "ai", "agents", "search", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
dirs = "6"
dialoguer = "0.11"
toml = "0.8"
anyhow = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
chunk = "0.9.2"
stop-words = "0.10"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "download-binaries", "tls-rustls", "copy-dylibs", "api-24"], optional = true }
ndarray = { version = "0.17", optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["http", "rustls-tls", "esaxx_fast", "onig", "progressbar"], optional = true }

[features]
default = ["reranker"]
reranker = ["dep:ort", "dep:ndarray", "dep:tokenizers"]

[profile.release]
opt-level = 3
lto = true
strip = true
